# bellringer

./: LICENSE  README.md  go.mod  go.sum  idobeall1.txt  main.go
emu/: bellringeremu  go.mod  go.sum  main.go
installer/linux/: installer  main.go
installer/windows/: setup.ifp
pico/: CMakeLists.txt  main.cpp  pico_gpio_serial.uf2
